--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     />
   </head>
   <body>
+    <div class="top-header">
+      
+    </div>
     <header>
       <div class="container-fluid nav-bg">
         <div class="custom-width">
